// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/button/ButtonLink should render ico after 1`] = `
.c2 {
  flex: 1;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c0 {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  color: inherit;
  text-decoration: underline;
}

.c0:hover {
  text-decoration: none;
}

.c0:focus {
  outline: 1px dashed #002d56;
  outline-color: inherit;
}

.c1 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  display: inline-flex;
  flex-direction: row;
  align-items: center;
  gap: 12px;
  line-height: 1;
  font-weight: 700;
  height: 40px;
  padding: 0 16px;
  padding-right: 12px;
  border: 2px solid #002d56;
  background: #fff;
  text-decoration: none;
}

.c1:hover:not(:disabled) {
  background-color: #f2f7fa;
}

.c1:focus {
  outline: 1px dashed #002d56;
}

.c1:disabled {
  color: #98c3d9;
  border-color: #98c3d9;
  background-color: #fff;
}

<div>
  <a
    class="c0 c1"
    data-discover="true"
    href="/test"
  >
    <span
      class="c2"
    >
      CONTENT
    </span>
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-xmark fa-sm"
      data-icon="xmark"
      data-prefix="fas"
      role="img"
      viewBox="0 0 384 512"
    >
      <path
        d="M55.1 73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L147.2 256 9.9 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192.5 301.3 329.9 438.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.8 256 375.1 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192.5 210.7 55.1 73.4z"
        fill="currentColor"
      />
    </svg>
  </a>
</div>
`;

exports[`components/button/ButtonLink should render ico before 1`] = `
.c2 {
  flex: 1;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c0 {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  color: inherit;
  text-decoration: underline;
}

.c0:hover {
  text-decoration: none;
}

.c0:focus {
  outline: 1px dashed #002d56;
  outline-color: inherit;
}

.c1 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  display: inline-flex;
  flex-direction: row;
  align-items: center;
  gap: 12px;
  line-height: 1;
  font-weight: 700;
  height: 40px;
  padding: 0 16px;
  padding-left: 12px;
  border: 2px solid #002d56;
  background: #fff;
  text-decoration: none;
}

.c1:hover:not(:disabled) {
  background-color: #f2f7fa;
}

.c1:focus {
  outline: 1px dashed #002d56;
}

.c1:disabled {
  color: #98c3d9;
  border-color: #98c3d9;
  background-color: #fff;
}

<div>
  <a
    class="c0 c1"
    data-discover="true"
    href="/test"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-xmark fa-sm"
      data-icon="xmark"
      data-prefix="fas"
      role="img"
      viewBox="0 0 384 512"
    >
      <path
        d="M55.1 73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L147.2 256 9.9 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192.5 301.3 329.9 438.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.8 256 375.1 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192.5 210.7 55.1 73.4z"
        fill="currentColor"
      />
    </svg>
    <span
      class="c2"
    >
      CONTENT
    </span>
  </a>
</div>
`;

exports[`components/button/ButtonLink should render properly 1`] = `
.c2 {
  flex: 1;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c0 {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  color: inherit;
  text-decoration: underline;
}

.c0:hover {
  text-decoration: none;
}

.c0:focus {
  outline: 1px dashed #002d56;
  outline-color: inherit;
}

.c1 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  display: inline-flex;
  flex-direction: row;
  align-items: center;
  gap: 12px;
  line-height: 1;
  font-weight: 700;
  height: 40px;
  padding: 0 16px;
  border: 2px solid #002d56;
  background: #fff;
  text-decoration: none;
}

.c1:hover:not(:disabled) {
  background-color: #f2f7fa;
}

.c1:focus {
  outline: 1px dashed #002d56;
}

.c1:disabled {
  color: #98c3d9;
  border-color: #98c3d9;
  background-color: #fff;
}

<div>
  <a
    class="c0 c1"
    data-discover="true"
    href="/test"
  >
    <span
      class="c2"
    >
      CONTENT
    </span>
  </a>
</div>
`;
